[package]
name = "cloud_start"
authors = ["Fermyon Engineering <engineering@fermyon.com>"]
description = "Your first Fermyon Cloud application"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
# Useful crate to handle errors.
anyhow = "1"
# The Spin SDK.
spin-sdk = "3.0.1"

[workspace]
